implemented: given gol must implement correct interface